fix bug for heroku

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "npm run clean && npm run build:webpack",
     "dev": "NODE_ENV=development npm start",
     "start": "node devServer.js",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "postinstall": "npm run clean && npm run build:webpack"
   },
   "repository": {
     "type": "git",
