--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "npm run clean && npm run build:webpack",
     "dev": "NODE_ENV=development npm start",
     "start": "node devServer.js",
-    "lint": "eslint src",
-    "postinstall": "npm run build:webpack"
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
