--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
   "presets": ["es2015", "react"]
 }
+
+{
+  "presets": [
+    "es2015",
+    "react",
+    "stage-0"
+  ],
+  "env": {
+    "development": {
+      "presets": [
+        "react-hmre"
+      ]
+    }
+  }
+}
