--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "babel-core": "^6.3.15",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "cross-env": "^2.0.1",
-    "css-loader": "^0.24.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.4.0",
     "eslint-config-airbnb": "^4.0.0",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^6.2.0",
     "eventsource-polyfill": "^0.9.6",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.8.5",
     "node-sass": "^3.4.2",
     "redux-devtools": "^3.0.1",
     "redux-devtools-dock-monitor": "^1.0.1",
@@ -43,8 +44,8 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "express": "^4.13.3",
